--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="preload" href="./images/icon-moon.svg" as="image">
-    <link rel="preload" href="./images/icon-sun.svg" as="image">
   </head>
 <body>
   <main>
@@ -19,7 +17,7 @@
     <section class="content">
       <header>
         <h1>TODO</h1>
-        <img class="dark-mood" src="/images/icon-sun.svg" alt="sun">
+        <img class="dark-mood" src="../images/icon-sun.svg" alt="sun">
       </header>
       <div class="mid">
         <span class="circl"></span>
