--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Age calculator app</title>
-    <link rel="stylesheet" href="../Css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="../Css/Styel.css" type="text/css">
+    <link rel="stylesheet" href="./Css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="./Css/Styel.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -37,8 +37,8 @@
       </div>
     </section>
   </main>
-  <script src="../Js/app.js"></script>
-  <script src="../Js/dark.js"></script>
+  <script src="./Js/app.js"></script>
+  <script src="./Js/dark.js"></script>
 </body>
 
 </html>
