--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="content">
       <header>
         <h1>TODO</h1>
-        <img class="dark-mood" src="/images/icon-sun.svg" alt="sun">
+        <img class="dark-mood" src="./images/icon-sun.svg" alt="sun">
       </header>
       <div class="mid">
         <span class="circl"></span>
