--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend Mentor | Age calculator app</title>
+    <title>Frontend Mentor | Todo app</title>
     <link rel="stylesheet" href="./Css/normalize.css" type="text/css">
     <link rel="stylesheet" href="./Css/Styel.css" type="text/css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
